--- a/GestionDesCongee/GCongée/project/angular.json
+++ b/GestionDesCongee/GCongée/project/angular.json
@@ -19,6 +19,17 @@
             "polyfills": [
               "zone.js"
             ],
+            "budgets": [
+  {
+    "type": "initial",
+    "maximumWarning": "2mb",
+    "maximumError": "2mb"
+  }
+],
+            
+            
+            
+            
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
